# Minishell

./: .Minishell.todo.md  .gitignore  .gitmodules  .swp  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  Minishell  README.md  \  infile  main.c  mini_test.txt  minishell  minishell_tests.expect  out  outfile  run_tests.sh  tags  test  ycm_extra_conf.py
test_minishell/: CMakeLists.txt  remove_escape_codes.sh  run_bash.expect  run_minishell.expect  run_minishell_command.c  run_minishell_command.h  run_test.sh  test.txt  test_main.c
test_minishell/expect_scripts/: run_bash.expect  run_minishell.expect
test_minishell/scripts/: banner.sh  build.sh  colors.sh  compare_single_command.sh  expect.sh  outputs.sh  process_outputs.sh  report_helpers.sh  results.sh  valgrind.sh
test_minishell/test_commands/: bonus_subshells.txt  mandatory_builtins_echo.txt  mandatory_expansions_env_variables.txt  mandatory_pipelines.txt
test_minishell/test_outputs/: bash_output_bonus_logical_operators.txt  bash_output_bonus_subshells.txt  bash_output_extended_error_messages.txt  bash_output_mandatory_basic_commands.txt  bash_output_mandatory_builtins_cd.txt  bash_output_mandatory_builtins_echo.txt  bash_output_mandatory_builtins_env.txt  bash_output_mandatory_builtins_exit.txt  bash_output_mandatory_builtins_overview.txt  bash_output_mandatory_builtins_pwd.txt  bash_output_mandatory_expansions_env_variables.txt  bash_output_mandatory_external_commands.txt  bash_output_mandatory_pipelines.txt  bash_output_mandatory_quoting.txt  bash_output_mandatory_redirections_heredoc.txt  bash_output_mandatory_redirections_input_output.txt  minishell_output_bonus_expansions_wildcards.txt  minishell_output_bonus_logical_operators.txt  minishell_output_bonus_subshells.txt  minishell_output_extended_error_messages.txt  minishell_output_mandatory_basic_commands.txt  minishell_output_mandatory_builtins_cd.txt  minishell_output_mandatory_builtins_echo.txt  minishell_output_mandatory_builtins_env.txt  minishell_output_mandatory_builtins_exit.txt  minishell_output_mandatory_builtins_overview.txt  minishell_output_mandatory_builtins_pwd.txt  minishell_output_mandatory_expansions_env_variables.txt  minishell_output_mandatory_external_commands.txt  minishell_output_mandatory_pipelines.txt  minishell_output_mandatory_redirections_input_output.txt
test_minishell/valgrind_outputs/: valgrind_bonus_expansions_wildcards_command_0.txt  valgrind_bonus_expansions_wildcards_command_1.txt  valgrind_bonus_expansions_wildcards_command_2.txt  valgrind_bonus_expansions_wildcards_command_3.txt  valgrind_bonus_expansions_wildcards_command_4.txt  valgrind_bonus_expansions_wildcards_command_5.txt  valgrind_bonus_expansions_wildcards_command_6.txt  valgrind_bonus_logical_operators_command_0.txt  valgrind_bonus_logical_operators_command_1.txt  valgrind_bonus_logical_operators_command_2.txt  valgrind_bonus_logical_operators_command_3.txt  valgrind_bonus_logical_operators_command_4.txt  valgrind_bonus_logical_operators_command_5.txt  valgrind_bonus_logical_operators_command_6.txt  valgrind_bonus_subshells_command_0.txt  valgrind_bonus_subshells_command_1.txt  valgrind_bonus_subshells_command_2.txt  valgrind_bonus_subshells_command_3.txt  valgrind_bonus_subshells_command_4.txt  valgrind_bonus_subshells_command_5.txt  valgrind_bonus_subshells_command_6.txt  valgrind_bonus_subshells_command_7.txt  valgrind_bonus_subshells_command_8.txt  valgrind_extended_error_messages_command_0.txt  valgrind_extended_error_messages_command_1.txt  valgrind_extended_error_messages_command_10.txt  valgrind_extended_error_messages_command_11.txt  valgrind_extended_error_messages_command_12.txt  valgrind_extended_error_messages_command_13.txt  valgrind_extended_error_messages_command_14.txt  valgrind_extended_error_messages_command_2.txt  valgrind_extended_error_messages_command_3.txt  valgrind_extended_error_messages_command_4.txt  valgrind_extended_error_messages_command_5.txt  valgrind_extended_error_messages_command_6.txt  valgrind_extended_error_messages_command_7.txt  valgrind_extended_error_messages_command_8.txt  valgrind_extended_error_messages_command_9.txt  valgrind_mandatory_basic_commands_command_0.txt  valgrind_mandatory_basic_commands_command_1.txt  (+136 more)
test_src/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  check_testunit_template  check_testunit_template.c  cmake_install.cmake  run_test_with_valgrind.sh  test_add_process  test_lst_tokens  test_ms_concat_path  test_ms_echo  test_ms_env  test_ms_env_add_back  test_ms_env_create_node  test_ms_execute_ast  test_ms_execute_external  test_ms_execute_pipeline  test_ms_exit  test_ms_expand_args  test_ms_expand_wild  test_ms_export  test_ms_get_env_value  test_ms_get_envp  test_ms_get_user_input  test_ms_getenv  test_ms_heredoc_mode  test_ms_init_env  test_ms_init_shell  test_ms_init_std_signal  test_ms_parse_tokens  test_ms_pwd  test_ms_set_env_value  test_ms_stop_std_signal  test_ms_syntax_error  test_ms_tokenize  test_ms_unset  test_tokenize_frame  test_tokenize_operator  test_tokenize_word
test_src/ast/: test_ms_parse_tokens.c
test_src/builtins/: test_ms_echo.c  test_ms_env.c  test_ms_exit.c  test_ms_export.c  test_ms_pwd.c  test_ms_unset.c
test_src/env_lst_utils/: test_ms_env_add_back.c  test_ms_env_create_node.c
test_src/env_value/: test_ms_get_env_value.c  test_ms_set_env_value.c
test_src/exec/: test_ms_concat_path.c  test_ms_execute_ast.c  test_ms_execute_external.c  test_ms_execute_logical.c  test_ms_execute_pipeline.c  test_ms_execute_subshell.c  test_ms_expand_wild.c  test_ms_get_envp.c  test_ms_getenv.c  test_ms_handle_redirections.c  test_ms_heredoc_mode.c  test_ms_parse_cmd_path.c
test_src/expand/: test_ms_expand_args.c  test_ms_expand_wild.c
test_src/init_shell/: test_ms_get_user_input.c  test_ms_init_env.c  test_ms_init_shell.c
test_src/process/: test_add_process.c
test_src/shell/: test_ms_env_create_node.c  test_ms_get_env_value.c  test_ms_get_envp.c  test_ms_init_env.c  test_ms_init_shell.c  test_ms_set_env_value.c
test_src/signal/: test_ms_init_std_signal.c  (+1 more)
(+515 files in other folders)
